--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
-      <ol>
+      <ol class="guide">
         <li><a href="#">Common varieties</a></li>
         <li><a href="#">Nutritional information</a></li>
         <li><a href="#">Tags</a></li>
@@ -20,9 +20,9 @@
   </header>
   <main>
     <figure>
-      <img src="images/beats.jpg">
+      <img src="images/beets.jpg" alt="">
       <figcaption>
-        <p>A bundle of organic beets from a local farm co-op program</p>
+        <p class="caption">A bundle of organic beets from a local farm co-op program</p>
       </figcaption>
     </figure>
     <data value="55 to 65 days">55 to 65 days are needed from germation to harvest of the root.</data>
@@ -30,7 +30,7 @@
     <blockquote>
       <p>In fact, <cite>Jim Halpert</cite>once said this about beets,<q>"Fact, bears eats beets. Bears, beets, <i>Battlestar Galactica</i>"</q></p>
     </blockquote>
-    <p>I have some <em>weird</em>habits. For instance,<strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
+    <p class="cp">I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
     <cite>Chris Pratt</cite>
     <h2>Common Varieties</h2>
     <ol>
